Added sorting and search as per one of the lectures. Works but needs refactoring

--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true" //LAPTOP
-    //"DefaultConnection": "Server=.;Database=Bank;Trusted_Connection=True;" // AORUS
+    //"DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true" //LAPTOP
+    "DefaultConnection": "Server=.;Database=Bank;Trusted_Connection=True;" // AORUS
   },
   "Logging": {
     "LogLevel": {
