Fixed so errors work with transactions, and styled withdraw and deposit

--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true", //LAPTOP
+    "DefaultConnection": "Server=.;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true" //AORUS
     //"BankWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
