--- a/BankWebApp/BankWebApp.csproj
+++ b/BankWebApp/BankWebApp.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Shared\Cards\" />
+  </ItemGroup>
+
 </Project>
