--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true", //LAPTOP
-    "DefaultConnection": "Server=.;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true" //AORUS
+    "DefaultConnection": "Server=.;Database=BankNewUsers;Trusted_Connection=True;MultipleActiveResultSets=true" //AORUS
     //"BankWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
