JWT tokens settings and configurations added to appsettings and Program

--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -10,5 +10,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "TbNyVyLmaBTbNyVyLmaBTbNyVyLmaBtpnOAQqpnE",
+    "Issuer": "https://localhost:7151/",
+    "Audience": "https://localhost:7151/"
+  }
 }
