--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true", //LAPTOP
+    "DefaultConnection": "Server=.;Database=BankNewUsers;Trusted_Connection=True;MultipleActiveResultSets=true" //AORUS
+    //"BankWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
