Optimazed countries data for dashboard and REMOVED transactions data for better performance on published build

--- a/BankWebApp/appsettings.json
+++ b/BankWebApp/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=LAPTOP-EK9K7IS5\\MSSQLSERVER01;Database=Bank;Trusted_Connection=True;MultipleActiveResultSets=true", //LAPTOP
-    "DefaultConnection": "Server=.;Database=BankNewUsers;Trusted_Connection=True;MultipleActiveResultSets=true" //AORUS
+    "DefaultConnection": "Server=.;Database=BankNewUsers;Trusted_Connection=True;MultipleActiveResultSets=true", //AORUS
+    //"DefaultConnection": "Data Source=tcp:heimir.database.windows.net,1433;Initial Catalog=BankNewUsers;User Id=HeimirAdmin@heimir;Password=*" //Azure
     //"BankWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BankWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
@@ -17,3 +18,10 @@
     "Audience": "https://localhost:7151/"
   }
 }
+
+
+
+
+
+
+
